@@ -31,6 +31,7 @@
 * Bug 3381149: Path of PCH source file in VS10 not being translated (intyuh)
 * Patch 3021550: Add Wii homebrew platform (Pathogen David)
 * Patch 3035550: Make/Distcc outputs dependencies to wrong location
+* Patch 3138574: NoImportLib ignored in Windows makefiles dependencies (rjmyst3)
 
 
 -------
